--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 
   <meta name="description" content="McLike - Web đặt đồ ăn nhanh hiện đại: Burger, Gà rán, Pizza, Combo và Đồ uống.">
 </head>
@@ -241,6 +241,7 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/app.js" defer></script>
+  <script src="JS/app.js" defer></script>
 </body>
 </html>
+
