--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Contact CSS -->
-  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="CSS/contact.css">
 
   <meta name="description" content="Liên hệ McLike - Góp ý, phản hồi, hoặc hợp tác cùng thương hiệu đồ ăn nhanh.">
 </head>
@@ -123,6 +123,7 @@
 
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/contact.js" defer></script>
+  <script src="JS/contact.js" defer></script>
 </body>
 </html>
+
