--- a/FAQ.html
+++ b/FAQ.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
 
   <meta name="description" content="Câu hỏi thường gặp - McLike đặt đồ ăn nhanh">
 </head>
@@ -120,3 +120,4 @@
   <script src="JS/app.js" defer></script>
 </body>
 </html>
+
