--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- About CSS -->
-  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="CSS/about.css">
 
   <meta name="description" content="Giới thiệu về McLike - Hành trình phát triển thương hiệu đồ ăn nhanh tại Việt Nam.">
 </head>
@@ -152,6 +152,7 @@
 
   <!-- JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/about.js" defer></script>
+  <script src="JS/about.js" defer></script>
 </body>
 </html>
+
