--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <!-- Thanh link phụ -->
 <div class="top-links text-center mt-3">
   <a href="index.html">Trang chủ</a> 
-  <a href="about.html">Giới thiệu</a> 
-  <a href="faq.html">FAQ</a> 
+  <a href="About.html">Giới thiệu</a> 
+  <a href="FAQ.html">FAQ</a> 
   <a href="contact.html">Liên hệ</a>
 </div>
 
@@ -244,4 +244,5 @@
   <script src="JS/app.js" defer></script>
 </body>
 </html>
+
 
