Fix HTML encoding issues in About.html

--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
       <nav class="ms-auto d-flex align-items-center gap-3">
         <div class="top-links">
           <a href="index.html">Trang chủ</a> 
-          <a href="about.html" class="active">Giới thiệu</a> 
+          <a href="About.html" class="active">Giới thiệu</a> 
           <a href="FAQ.html">FAQ</a> 
           <a href="contact.html">Liên hệ</a>
         </div>
@@ -155,4 +155,5 @@
   <script src="JS/about.js" defer></script>
 </body>
 </html>
+
 
