--- a/FAQ.html
+++ b/FAQ.html
@@ -23,8 +23,8 @@
         <!-- Thanh link phụ -->
         <div class="top-links text-center mt-3">
           <a href="index.html">Trang chủ</a> 
-          <a href="about.html">Giới thiệu</a> 
-          <a href="faq.html" class="fw-bold text-warning">FAQ</a> 
+          <a href="About.html">Giới thiệu</a> 
+          <a href="FAQ.html" class="fw-bold text-warning">FAQ</a> 
           <a href="contact.html">Liên hệ</a>
         </div>
 
@@ -120,4 +120,5 @@
   <script src="JS/app.js" defer></script>
 </body>
 </html>
+
 
