--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
       <nav class="ms-auto d-flex align-items-center gap-3">
         <div class="top-links">
           <a href="index.html">Trang chủ</a> 
-          <a href="about.html">Giới thiệu</a> 
-          <a href="faq.html">FAQ</a> 
+          <a href="About.html">Giới thiệu</a> 
+          <a href="FAQ.html">FAQ</a> 
           <a href="contact.html" class="active">Liên hệ</a>
         </div>
         <button class="btn btn-warning btn-sm fw-bold" data-bs-toggle="modal" data-bs-target="#loginModal">Đăng nhập</button>
@@ -126,4 +126,5 @@
   <script src="JS/contact.js" defer></script>
 </body>
 </html>
+
 
